--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_capacitador.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_capacitador.jrxml
@@ -39,116 +39,116 @@ FROM
 	<title>
 		<band height="123">
 			<textField>
-				<reportElement x="425" y="58" width="60" height="20" uuid="381ade50-b892-440a-9f60-ac9752613405"/>
+				<reportElement uuid="381ade50-b892-440a-9f60-ac9752613405" x="372" y="93" width="74" height="20"/>
 				<textElement textAlignment="Right">
-					<font fontName="Times New Roman"/>
+					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Página "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
 			</textField>
 			<textField pattern="dd/MM/yyyy">
-				<reportElement x="83" y="65" width="60" height="20" uuid="5fb20cd9-d5af-4494-8485-fe34e1872912"/>
+				<reportElement uuid="5fb20cd9-d5af-4494-8485-fe34e1872912" x="117" y="93" width="70" height="20"/>
 				<textElement textAlignment="Right">
-					<font fontName="Times New Roman"/>
+					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="4" y="65" width="89" height="20" uuid="df2e868f-1920-437e-a2e8-b629d7dd1694"/>
+				<reportElement uuid="df2e868f-1920-437e-a2e8-b629d7dd1694" x="48" y="93" width="114" height="20"/>
 				<textElement>
-					<font fontName="Times New Roman"/>
+					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Fecha de Generación:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="153" y="0" width="265" height="20" uuid="c300e3ee-2a13-424d-ad94-ed33ddc6fe70"/>
-				<textElement textAlignment="Center" markup="none">
-					<font fontName="Times New Roman" isBold="true"/>
-				</textElement>
-				<text><![CDATA[MINISTERIO DE JUSTICIA Y SEGURIDAD PUBLICA]]></text>
-			</staticText>
-			<staticText>
-				<reportElement positionType="FixRelativeToBottom" x="156" y="58" width="264" height="23" uuid="83a9722d-5e32-4bca-901a-b1dc7b25149a"/>
+				<reportElement uuid="83a9722d-5e32-4bca-901a-b1dc7b25149a" positionType="FixRelativeToBottom" x="150" y="74" width="265" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle" rotation="None" markup="none">
-					<font fontName="Times New Roman" isBold="true"/>
+					<font fontName="Times New Roman" size="9" isBold="false"/>
 					<paragraph lineSpacing="Proportional"/>
 				</textElement>
-				<text><![CDATA[REPORTE DE CAPACITADORES]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="154" y="20" width="265" height="20" uuid="739e3806-a8a4-4126-a98f-a9659c212222"/>
-				<textElement textAlignment="Center" markup="none">
-					<font fontName="Times New Roman" isBold="true"/>
-				</textElement>
-				<text><![CDATA[DIRECCION DE RECURSOS HUMANOS]]></text>
+				<text><![CDATA[Reporte de Capacitadores]]></text>
 			</staticText>
 			<textField evaluationTime="Report">
-				<reportElement x="485" y="58" width="12" height="20" uuid="0e4a0f73-d910-4993-b03e-1b1f92695f7d"/>
+				<reportElement uuid="0e4a0f73-d910-4993-b03e-1b1f92695f7d" x="447" y="93" width="26" height="20"/>
 				<textElement>
-					<font fontName="Times New Roman"/>
+					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="239" y="96" width="91" height="20" uuid="d6e71bd6-1338-4325-8f1f-f930ffda16ba"/>
+				<reportElement uuid="d6e71bd6-1338-4325-8f1f-f930ffda16ba" x="233" y="93" width="100" height="20"/>
 				<textElement>
-					<font fontName="Times New Roman"/>
+					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAINICIO}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="306" y="96" width="40" height="20" uuid="009281ea-aadf-4969-bc06-5909ec18c5db"/>
+				<reportElement uuid="009281ea-aadf-4969-bc06-5909ec18c5db" x="293" y="93" width="39" height="20"/>
 				<textElement>
-					<font fontName="Times New Roman"/>
+					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Hasta:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="211" y="96" width="39" height="20" uuid="b9dd5fa4-1069-4c39-b64d-2ac7f4476240"/>
+				<reportElement uuid="b9dd5fa4-1069-4c39-b64d-2ac7f4476240" x="203" y="93" width="39" height="20"/>
 				<textElement>
-					<font fontName="Times New Roman"/>
+					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Desde:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="442" y="43" width="39" height="17" uuid="28b28125-10b9-419f-897a-3b2ac3051788"/>
+				<reportElement uuid="28b28125-10b9-419f-897a-3b2ac3051788" x="396" y="79" width="39" height="20"/>
 				<textElement>
-					<font fontName="Times New Roman"/>
+					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Usuario:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="483" y="43" width="72" height="17" uuid="367640ed-9134-4e33-96a4-9b970151d75e"/>
+				<reportElement uuid="367640ed-9134-4e33-96a4-9b970151d75e" x="434" y="79" width="100" height="20"/>
 				<textElement>
-					<font fontName="Times New Roman"/>
+					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{USUARIO}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="344" y="96" width="73" height="20" uuid="91f40ec5-61ec-441f-9ff0-423a22f05acd"/>
+				<reportElement uuid="91f40ec5-61ec-441f-9ff0-423a22f05acd" x="320" y="93" width="100" height="20"/>
 				<textElement>
-					<font fontName="Times New Roman"/>
+					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAFIN}]]></textFieldExpression>
 			</textField>
 			<image>
-				<reportElement x="0" y="2" width="143" height="38" uuid="93a0189e-aae1-45b9-9927-e19e102e9ae3"/>
+				<reportElement uuid="93a0189e-aae1-45b9-9927-e19e102e9ae3" x="30" y="12" width="140" height="80"/>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/GOES.jpg")]]></imageExpression>
 			</image>
 			<image>
-				<reportElement x="442" y="0" width="113" height="44" uuid="5a44a052-5746-4181-bbdf-c8df2e4e26b6"/>
+				<reportElement uuid="5a44a052-5746-4181-bbdf-c8df2e4e26b6" x="395" y="9" width="140" height="70"/>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/LOGOMJ.jpg")]]></imageExpression>
 			</image>
 			<staticText>
-				<reportElement x="4" y="38" width="85" height="20" uuid="51dcab81-c76a-4166-a63d-18beb65577c5"/>
+				<reportElement uuid="51dcab81-c76a-4166-a63d-18beb65577c5" x="50" y="80" width="76" height="21"/>
 				<textElement>
-					<font fontName="Times New Roman"/>
+					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[pnt_reporte_cado]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="155" y="40" width="265" height="20" uuid="34e066ad-376c-43a1-95fa-93350f70b73a"/>
-				<textElement textAlignment="Center" markup="none">
-					<font fontName="Times New Roman" isBold="true"/>
+				<reportElement uuid="2c2a55fb-fecd-4350-96a4-0f817b2bb4d9" x="146" y="19" width="265" height="20"/>
+				<textElement textAlignment="Center">
+					<font fontName="Times New Roman" size="9" isBold="false"/>
+				</textElement>
+				<text><![CDATA[Ministerio de Justicia y Seguridad Pública]]></text>
+			</staticText>
+			<staticText>
+				<reportElement uuid="27d32f01-d373-4d81-a466-e3559a7c7c8e" x="146" y="39" width="265" height="20"/>
+				<textElement textAlignment="Center">
+					<font fontName="Times New Roman" size="9" isBold="false"/>
+				</textElement>
+				<text><![CDATA[Dirección de Recursos Humanos]]></text>
+			</staticText>
+			<staticText>
+				<reportElement uuid="0c2e2a83-13a7-4cde-935e-90d88beab7a6" x="146" y="59" width="265" height="20"/>
+				<textElement textAlignment="Center">
+					<font fontName="Times New Roman" size="9" isBold="false"/>
 				</textElement>
 				<text><![CDATA[SISADMRH]]></text>
 			</staticText>
@@ -158,91 +158,91 @@ FROM
 		<band/>
 	</pageHeader>
 	<columnHeader>
-		<band height="39">
+		<band height="14">
 			<rectangle>
-				<reportElement x="0" y="11" width="510" height="27" backcolor="#FFFFFF" uuid="88708dc7-3fb2-43b9-88cf-eef3dd410f4e"/>
+				<reportElement uuid="88708dc7-3fb2-43b9-88cf-eef3dd410f4e" x="46" y="0" width="451" height="14" backcolor="#FFFFFF"/>
 			</rectangle>
 			<staticText>
-				<reportElement mode="Transparent" x="0" y="11" width="100" height="27" forecolor="#000000" backcolor="#E6E6E6" uuid="5bad4120-5e48-417e-93e9-744284a3fe27"/>
+				<reportElement uuid="5bad4120-5e48-417e-93e9-744284a3fe27" mode="Transparent" x="46" y="0" width="109" height="14" forecolor="#000000" backcolor="#E6E6E6"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Nombre Capacitador]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Transparent" x="103" y="11" width="101" height="26" forecolor="#000000" backcolor="#E6E6E6" uuid="90329b24-197c-409f-ad29-8bb7c4f12749"/>
+				<reportElement uuid="90329b24-197c-409f-ad29-8bb7c4f12749" mode="Transparent" x="155" y="0" width="51" height="14" forecolor="#000000" backcolor="#E6E6E6"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Tipo Capacitador]]></text>
+				<text><![CDATA[Tipo ]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Transparent" x="204" y="11" width="85" height="27" forecolor="#000000" backcolor="#E6E6E6" uuid="4bed08c9-10e1-4d1b-8112-5d8cdbc2fdcd"/>
+				<reportElement uuid="4bed08c9-10e1-4d1b-8112-5d8cdbc2fdcd" mode="Transparent" x="207" y="0" width="63" height="14" forecolor="#000000" backcolor="#E6E6E6"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Teléfono Movil]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Transparent" x="290" y="11" width="127" height="26" forecolor="#000000" backcolor="#E6E6E6" uuid="e5b0ded0-c0d8-4746-a333-f306e0fe286e"/>
+				<reportElement uuid="e5b0ded0-c0d8-4746-a333-f306e0fe286e" mode="Transparent" x="271" y="0" width="146" height="14" forecolor="#000000" backcolor="#E6E6E6"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Email]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Transparent" x="418" y="11" width="92" height="27" forecolor="#000000" backcolor="#E6E6E6" uuid="a80af39f-1e86-4180-8969-4323788b37d3"/>
+				<reportElement uuid="a80af39f-1e86-4180-8969-4323788b37d3" mode="Transparent" x="418" y="0" width="79" height="14" forecolor="#000000" backcolor="#E6E6E6"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Temas de Dominio]]></text>
 			</staticText>
 			<line direction="BottomUp">
-				<reportElement x="102" y="11" width="1" height="27" uuid="4535c894-e87d-4ecd-a98f-37ff0c33f3cc"/>
+				<reportElement uuid="4535c894-e87d-4ecd-a98f-37ff0c33f3cc" x="154" y="0" width="1" height="14"/>
 			</line>
 			<line direction="BottomUp">
-				<reportElement x="204" y="11" width="1" height="27" uuid="e3d77288-5cc6-418d-be1a-835371ec200f"/>
+				<reportElement uuid="e3d77288-5cc6-418d-be1a-835371ec200f" x="206" y="0" width="1" height="14"/>
 			</line>
 			<line direction="BottomUp">
-				<reportElement x="289" y="11" width="1" height="27" uuid="c45af939-c5e5-4f47-8c54-129eb64fa57b"/>
+				<reportElement uuid="c45af939-c5e5-4f47-8c54-129eb64fa57b" x="270" y="0" width="1" height="14"/>
 			</line>
 			<line direction="BottomUp">
-				<reportElement x="417" y="11" width="1" height="27" uuid="0cfe2ca1-0685-462b-af20-290ca142c9a1"/>
+				<reportElement uuid="0cfe2ca1-0685-462b-af20-290ca142c9a1" x="417" y="0" width="1" height="14"/>
 			</line>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="22">
+		<band height="14">
 			<textField isStretchWithOverflow="true">
-				<reportElement x="2" y="0" width="100" height="20" uuid="b3d555ca-2d9d-4428-a708-b5df7daf20b4"/>
+				<reportElement uuid="b3d555ca-2d9d-4428-a708-b5df7daf20b4" x="48" y="0" width="106" height="14"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{capacitador_nombrecapacitador}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement x="103" y="0" width="101" height="20" uuid="db631a7c-a4e1-4932-b58a-2a3aa4c874e8"/>
+				<reportElement uuid="db631a7c-a4e1-4932-b58a-2a3aa4c874e8" x="162" y="0" width="51" height="14"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{capacitador_tipocapacitador}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement x="289" y="0" width="128" height="20" uuid="44d3df89-ca59-4001-82bb-4ab68e8667f2"/>
+				<reportElement uuid="44d3df89-ca59-4001-82bb-4ab68e8667f2" x="275" y="0" width="146" height="14"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{capacitador_emailcapacitador}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement x="420" y="0" width="90" height="20" uuid="b2602596-d40c-4f43-af5e-9ec35ff47311"/>
+				<reportElement uuid="b2602596-d40c-4f43-af5e-9ec35ff47311" x="420" y="0" width="77" height="14"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{capacitador_temadominio}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement x="204" y="0" width="85" height="20" uuid="17518cf7-92f1-40ba-b458-314b9d67d4a4"/>
+				<reportElement uuid="17518cf7-92f1-40ba-b458-314b9d67d4a4" x="210" y="0" width="63" height="14"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
@@ -250,21 +250,10 @@ FROM
 			</textField>
 		</band>
 	</detail>
-	<pageFooter>
-		<band height="50">
-			<staticText>
-				<reportElement x="172" y="30" width="192" height="20" uuid="acd5b0ff-6fc4-42a1-bddd-8f2c73c5e95b"/>
-				<textElement>
-					<font fontName="Times New Roman" size="12"/>
-				</textElement>
-				<text><![CDATA[Derechos Reservados UES/FIA/EISI]]></text>
-			</staticText>
-		</band>
-	</pageFooter>
 	<summary>
-		<band height="34">
+		<band height="19">
 			<textField isStretchWithOverflow="true" pattern="###0">
-				<reportElement positionType="FixRelativeToBottom" mode="Opaque" x="307" y="12" width="227" height="13" isRemoveLineWhenBlank="true" isPrintInFirstWholeBand="true" backcolor="#FFFFFF" uuid="49530a96-c282-4137-9bcf-092e6b63a991"/>
+				<reportElement uuid="49530a96-c282-4137-9bcf-092e6b63a991" positionType="FixRelativeToBottom" mode="Opaque" x="269" y="4" width="227" height="13" isRemoveLineWhenBlank="true" isPrintInFirstWholeBand="true" backcolor="#FFFFFF"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" isUnderline="true"/>
 				</textElement>
