--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_contrataciones.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_contrataciones.jrxml
@@ -42,115 +42,115 @@
 	<title>
 		<band height="131">
 			<textField pattern="dd/MM/yyyy">
-				<reportElement x="70" y="80" width="70" height="20" uuid="20bb02c0-d567-44d4-b2c4-4c0ea68070ae"/>
+				<reportElement uuid="20bb02c0-d567-44d4-b2c4-4c0ea68070ae" x="117" y="93" width="70" height="20"/>
 				<textElement textAlignment="Right">
-					<font fontName="Times New Roman"/>
+					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
-			<staticText>
-				<reportElement x="143" y="0" width="265" height="20" uuid="b8109316-bf57-4f9e-84ec-b447b52c43a7"/>
-				<textElement textAlignment="Center">
-					<font fontName="Times New Roman" isBold="true"/>
-				</textElement>
-				<text><![CDATA[MINISTERIO DE JUSTICIA Y SEGURIDAD PUBLICA]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="143" y="20" width="265" height="20" uuid="1efec528-ea58-419e-a39f-866945c1694f"/>
-				<textElement textAlignment="Center">
-					<font fontName="Times New Roman" isBold="true"/>
-				</textElement>
-				<text><![CDATA[DIRECCION DE RECURSOS HUMANOS]]></text>
-			</staticText>
 			<textField>
-				<reportElement x="408" y="81" width="74" height="20" uuid="d2d48d07-0968-466b-9432-3d8f5229d0b4"/>
+				<reportElement uuid="d2d48d07-0968-466b-9432-3d8f5229d0b4" x="408" y="81" width="74" height="20"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Pàgina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="143" y="78" width="265" height="20" uuid="d1ce97b8-d1d2-4b89-b49b-169ec8cb24c9"/>
+				<reportElement uuid="d1ce97b8-d1d2-4b89-b49b-169ec8cb24c9" x="143" y="78" width="265" height="20"/>
 				<textElement textAlignment="Center">
-					<font fontName="Times New Roman" isBold="true"/>
+					<font fontName="Times New Roman" size="9" isBold="false"/>
 				</textElement>
-				<text><![CDATA[REPORTE DE NUEVAS CONTRATACIONES]]></text>
+				<text><![CDATA[Reporte de Nuevas Contrataciones]]></text>
 			</staticText>
 			<textField evaluationTime="Report">
-				<reportElement x="482" y="81" width="26" height="20" uuid="fa7f683f-2195-46cb-80b3-ea989af1ee81"/>
+				<reportElement uuid="fa7f683f-2195-46cb-80b3-ea989af1ee81" x="482" y="81" width="26" height="20"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="6" y="80" width="91" height="20" uuid="8cae14a6-c433-461f-a07b-c8abf6c60049"/>
+				<reportElement uuid="8cae14a6-c433-461f-a07b-c8abf6c60049" x="48" y="93" width="114" height="20"/>
 				<textElement>
-					<font fontName="Times New Roman"/>
+					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Fecha de Generación:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="436" y="61" width="39" height="20" uuid="8db62085-9fe6-4b69-b055-d239c583ecf5"/>
+				<reportElement uuid="8db62085-9fe6-4b69-b055-d239c583ecf5" x="396" y="79" width="39" height="20"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<text><![CDATA[Usuario:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="289" y="100" width="39" height="20" uuid="f8a6159b-88a9-44b2-aa21-e0b4af67a7c3"/>
+				<reportElement uuid="f8a6159b-88a9-44b2-aa21-e0b4af67a7c3" x="289" y="100" width="39" height="20"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<text><![CDATA[Hasta:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="316" y="100" width="100" height="20" uuid="4d3e6229-3bd2-4216-b109-467a1c5008f8"/>
+				<reportElement uuid="4d3e6229-3bd2-4216-b109-467a1c5008f8" x="316" y="100" width="100" height="20"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAFIN}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="475" y="61" width="100" height="20" uuid="3f676349-db7f-408e-88f1-b1850570b533"/>
+				<reportElement uuid="3f676349-db7f-408e-88f1-b1850570b533" x="439" y="79" width="100" height="20"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{USUARIO}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="172" y="100" width="39" height="20" uuid="17454eab-9cc6-4f5e-91a6-0bc0832a2b43"/>
+				<reportElement uuid="17454eab-9cc6-4f5e-91a6-0bc0832a2b43" x="172" y="100" width="39" height="20"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<text><![CDATA[Desde:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="199" y="100" width="100" height="20" uuid="664f04b5-48d9-405f-b80d-da039a387770"/>
+				<reportElement uuid="664f04b5-48d9-405f-b80d-da039a387770" x="199" y="100" width="100" height="20"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAINICIO}]]></textFieldExpression>
 			</textField>
 			<image>
-				<reportElement x="432" y="0" width="123" height="60" uuid="a2ddf854-1451-44aa-ad8f-8c7a824aaf93"/>
+				<reportElement uuid="a2ddf854-1451-44aa-ad8f-8c7a824aaf93" x="395" y="9" width="140" height="70"/>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/LOGOMJ.jpg")]]></imageExpression>
 			</image>
 			<image>
-				<reportElement x="0" y="0" width="120" height="58" uuid="c6efa9b9-a500-4a0f-bb16-409eeac06829"/>
+				<reportElement uuid="c6efa9b9-a500-4a0f-bb16-409eeac06829" x="30" y="12" width="140" height="80"/>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/GOES.jpg")]]></imageExpression>
 			</image>
 			<staticText>
-				<reportElement x="6" y="58" width="79" height="20" uuid="e7d9fc24-1992-422f-a262-0dec7e9bcb4b"/>
+				<reportElement uuid="e7d9fc24-1992-422f-a262-0dec7e9bcb4b" x="50" y="80" width="76" height="21"/>
 				<textElement>
-					<font fontName="Times New Roman"/>
+					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[pnt_reporte_neco]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="143" y="40" width="265" height="20" uuid="2cf5cff8-8838-4122-a1e0-da0d15f3f6e3"/>
+				<reportElement uuid="511346f9-c808-474d-8461-1697a8e992e9" x="146" y="19" width="265" height="20"/>
 				<textElement textAlignment="Center">
-					<font fontName="Times New Roman" isBold="true"/>
+					<font fontName="Times New Roman" size="9" isBold="false"/>
+				</textElement>
+				<text><![CDATA[Ministerio de Justicia y Seguridad Pública]]></text>
+			</staticText>
+			<staticText>
+				<reportElement uuid="b6217f52-beae-478b-89f1-906f22c8f993" x="146" y="39" width="265" height="20"/>
+				<textElement textAlignment="Center">
+					<font fontName="Times New Roman" size="9" isBold="false"/>
+				</textElement>
+				<text><![CDATA[Dirección de Recursos Humanos]]></text>
+			</staticText>
+			<staticText>
+				<reportElement uuid="12b1d51a-1bef-438d-90aa-22a259dafb3b" x="146" y="59" width="265" height="20"/>
+				<textElement textAlignment="Center">
+					<font fontName="Times New Roman" size="9" isBold="false"/>
 				</textElement>
 				<text><![CDATA[SISADMRH]]></text>
 			</staticText>
@@ -162,113 +162,113 @@
 	<columnHeader>
 		<band height="42">
 			<rectangle>
-				<reportElement x="0" y="4" width="553" height="38" backcolor="#FFFFFF" uuid="5d2c9f60-e28f-42c9-bf6c-cd5f2a0cf21d"/>
+				<reportElement uuid="5d2c9f60-e28f-42c9-bf6c-cd5f2a0cf21d" x="0" y="4" width="553" height="38" backcolor="#FFFFFF"/>
 			</rectangle>
 			<staticText>
-				<reportElement mode="Transparent" x="0" y="4" width="54" height="38" forecolor="#000000" backcolor="#E6E6E6" uuid="695f1588-5de8-455b-aed9-ed6c73eeb60a"/>
+				<reportElement uuid="695f1588-5de8-455b-aed9-ed6c73eeb60a" mode="Transparent" x="0" y="4" width="54" height="38" forecolor="#000000" backcolor="#E6E6E6"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Código Empleado]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Transparent" x="55" y="4" width="182" height="37" forecolor="#000000" backcolor="#E6E6E6" uuid="e4e66651-0c88-4063-a2c0-741ac227aa51"/>
+				<reportElement uuid="e4e66651-0c88-4063-a2c0-741ac227aa51" mode="Transparent" x="55" y="4" width="182" height="37" forecolor="#000000" backcolor="#E6E6E6"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Nombre del Empleado]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Transparent" x="237" y="4" width="79" height="38" forecolor="#000000" backcolor="#E6E6E6" uuid="b0756311-fe34-46f7-a804-a9a7437a9df2"/>
+				<reportElement uuid="b0756311-fe34-46f7-a804-a9a7437a9df2" mode="Transparent" x="237" y="4" width="79" height="38" forecolor="#000000" backcolor="#E6E6E6"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Cargo]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Transparent" x="316" y="4" width="79" height="38" forecolor="#000000" backcolor="#E6E6E6" uuid="f41035a0-5ba4-4fb1-8489-c2679cd44b21"/>
+				<reportElement uuid="f41035a0-5ba4-4fb1-8489-c2679cd44b21" mode="Transparent" x="316" y="4" width="79" height="38" forecolor="#000000" backcolor="#E6E6E6"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Ubicación]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Transparent" x="396" y="4" width="79" height="37" forecolor="#000000" backcolor="#E6E6E6" uuid="903c871b-fffd-439e-a5d2-46927fe1b1a5"/>
+				<reportElement uuid="903c871b-fffd-439e-a5d2-46927fe1b1a5" mode="Transparent" x="396" y="4" width="79" height="37" forecolor="#000000" backcolor="#E6E6E6"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Fecha de Contratación]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Transparent" x="474" y="4" width="79" height="38" forecolor="#000000" backcolor="#E6E6E6" uuid="dfb2173e-502c-43cf-bf60-fb49c1260741"/>
+				<reportElement uuid="dfb2173e-502c-43cf-bf60-fb49c1260741" mode="Transparent" x="474" y="4" width="79" height="38" forecolor="#000000" backcolor="#E6E6E6"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Salario($)]]></text>
 			</staticText>
 			<line direction="BottomUp">
-				<reportElement x="54" y="4" width="1" height="37" uuid="b737e0fa-3a60-40c8-bb90-14263068fda4"/>
+				<reportElement uuid="b737e0fa-3a60-40c8-bb90-14263068fda4" x="54" y="4" width="1" height="37"/>
 			</line>
 			<line direction="BottomUp">
-				<reportElement x="237" y="4" width="1" height="37" uuid="e9f2514f-8bf2-42ed-bc54-b56ff74588ce"/>
+				<reportElement uuid="e9f2514f-8bf2-42ed-bc54-b56ff74588ce" x="237" y="4" width="1" height="37"/>
 			</line>
 			<line direction="BottomUp">
-				<reportElement x="315" y="4" width="1" height="38" uuid="8540acee-8866-4189-bda7-d708889424e3"/>
+				<reportElement uuid="8540acee-8866-4189-bda7-d708889424e3" x="315" y="4" width="1" height="38"/>
 			</line>
 			<line direction="BottomUp">
-				<reportElement x="394" y="4" width="1" height="37" uuid="894948cc-6f2b-4b03-b2db-071d5a1f4678"/>
+				<reportElement uuid="894948cc-6f2b-4b03-b2db-071d5a1f4678" x="394" y="4" width="1" height="37"/>
 			</line>
 			<line direction="BottomUp">
-				<reportElement x="474" y="4" width="1" height="37" uuid="8fcd407e-204b-45c5-a917-4c4dd84b10ca"/>
+				<reportElement uuid="8fcd407e-204b-45c5-a917-4c4dd84b10ca" x="474" y="4" width="1" height="37"/>
 			</line>
 		</band>
 	</columnHeader>
 	<detail>
 		<band height="24">
 			<textField isStretchWithOverflow="true">
-				<reportElement x="0" y="0" width="54" height="20" uuid="1e6acfee-6c20-4362-bd70-58ef802e549b"/>
+				<reportElement uuid="1e6acfee-6c20-4362-bd70-58ef802e549b" x="0" y="0" width="54" height="20"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{codigoempleado}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement x="55" y="0" width="103" height="20" uuid="a4137d74-cbdb-425e-841f-550510eb35d8"/>
+				<reportElement uuid="a4137d74-cbdb-425e-841f-550510eb35d8" x="55" y="0" width="103" height="20"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{nombreempleado}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement x="237" y="0" width="79" height="20" uuid="bb36aa86-dc59-4cf8-81a7-a0e32465aaee"/>
+				<reportElement uuid="bb36aa86-dc59-4cf8-81a7-a0e32465aaee" x="237" y="0" width="79" height="20"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{nombrepuesto}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement x="316" y="0" width="79" height="20" uuid="17c5d097-5227-4346-8009-afafcd1fdc53"/>
+				<reportElement uuid="17c5d097-5227-4346-8009-afafcd1fdc53" x="316" y="0" width="79" height="20"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{ubicacionpuesto}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement x="395" y="0" width="79" height="20" uuid="12001817-6454-4eed-b1ba-974bde67a060"/>
+				<reportElement uuid="12001817-6454-4eed-b1ba-974bde67a060" x="395" y="0" width="79" height="20"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{fechainiciocontrato}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement x="470" y="0" width="79" height="20" uuid="84e26bc9-bfd6-4c12-8b0d-9216e598845f"/>
+				<reportElement uuid="84e26bc9-bfd6-4c12-8b0d-9216e598845f" x="470" y="0" width="79" height="20"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new DecimalFormat("###,###,##0.00").format($F{salarioactual})]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement x="120" y="0" width="79" height="20" uuid="e89e1ef3-3839-49be-a1b1-bfd4508f78b3"/>
+				<reportElement uuid="e89e1ef3-3839-49be-a1b1-bfd4508f78b3" x="120" y="0" width="79" height="20"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
@@ -282,7 +282,7 @@
 	<pageFooter>
 		<band height="44">
 			<staticText>
-				<reportElement x="186" y="11" width="192" height="20" uuid="816a5691-ef47-4091-b091-6990786bd367"/>
+				<reportElement uuid="816a5691-ef47-4091-b091-6990786bd367" x="186" y="11" width="192" height="20"/>
 				<textElement>
 					<font fontName="Times New Roman" size="12"/>
 				</textElement>
@@ -293,7 +293,7 @@
 	<summary>
 		<band height="19">
 			<textField isStretchWithOverflow="true" pattern="###0">
-				<reportElement mode="Opaque" x="18" y="5" width="535" height="13" backcolor="#FFFFFF" uuid="78a322f0-77a1-4642-be64-b9f31d5d90d3"/>
+				<reportElement uuid="78a322f0-77a1-4642-be64-b9f31d5d90d3" mode="Opaque" x="18" y="5" width="535" height="13" backcolor="#FFFFFF"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" isUnderline="true"/>
 				</textElement>
